# Tp01.1-poo

./: Makefile  README.md  aeronaves.csv  estatisticas.txt  passageiros.csv  pessoas.csv  pilotos.csv  programa  voos.csv
2025-1_A04-calculo-de-pi-reitheus/: README.md  cabal.project  calculo-de-pi.cabal
2025-1_A04-calculo-de-pi-reitheus/app/: Main.hs
2025-1_A04-calculo-de-pi-reitheus/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
2025-1_A04-calculo-de-pi-reitheus/src/: CalculoPi.hs
2025-1_A04-calculo-de-pi-reitheus/test/: MainSpec.hs  Run.hs
2025-1_A05-media-sequencia-reitheus/: LICENSE  README.md  media-sequencia.cabal
2025-1_A05-media-sequencia-reitheus/app/: Main.hs
2025-1_A05-media-sequencia-reitheus/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
2025-1_A05-media-sequencia-reitheus/src/: MediaSequencia.hs
2025-1_A05-media-sequencia-reitheus/test/: MainSpec.hs
classes/: Aeronave.cpp  Horario.cpp  Main.cpp  Passageiro.cpp  Persistencia.cpp  Pessoa.cpp  Piloto.cpp  Relatorios.cpp  Sistema.cpp  Voo.cpp
src/: Aeronave.h  Horario.h  Passageiro.h  Persistencia.h  Pessoa.h  Piloto.h  Relatorios.h  Sistema.h  Voo.h
